// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutoReplyWismoModal/> should render an alert when there are no shopify integrations 1`] = `
<div
  class="managedRule autoReplyWismo"
>
  <div
    class="alert warning mb-2"
  >
    <div
      class="iconContainer"
    >
      <img
        alt="icon"
        src="test-file-stub"
      />
    </div>
    <div
      class="content"
    >
      <span
        class="label"
      >
        This rule requires a Shopify integration to run.
      </span>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="description"
    >
      <div
        class="count"
      >
        <div
          class="targetTitle"
        >
          target up to
        </div>
        <div
          class="targetValue"
        >
          <span
            class="bold"
          >
            10
          </span>
           
          tickets/month
        </div>
      </div>
      <div
        class="descriptionBlock"
      >
        <h4>
          Answer "Where is my order" request automatically
        </h4>
        <p>
          This rule leverages AI to automatically detect if incoming emails from shoppers are related
           
          <strong>
            to tracking or “where is my order” requests
          </strong>
          . When such a message is detected, the rule sends an automated message providing shoppers with the tracking link for their three last orders and closes the ticket.
        </p>
      </div>
      <div
        class="descriptionBlock"
      >
        <h4>
          Customize your message
        </h4>
        <p>
          You can personalize your message to make it your own.
        </p>
      </div>
      <div
        class="descriptionBlock"
      >
        <p
          class="addendum"
        >
          If your customer replies to the automated message, the ticket will be reopened in your backend. This rule requires an active Shopify integration to work correctly.
        </p>
      </div>
      <div
        class="descriptionBlock"
      />
    </div>
    <div
      class="example"
    >
      <div
        class="exampleContainer bordered"
      >
        <div
          class="fakeMessage"
        >
          <div
            class="component"
            style="width: 28px; height: 28px;"
          >
            <div
              class="initials"
              style="width: 28px; height: 28px; font-size: 11.666666666666668px;"
            >
              <span
                style="line-height: 30px;"
              >
                Cn
              </span>
            </div>
          </div>
          <div
            class="ml-3"
          >
            <div
              class="name"
            >
              Client Name
            </div>
            <div>
              Hey, do you have a tracking number so I can double check?
            </div>
          </div>
        </div>
        <div
          class="fakeMessage"
        >
          <div>
            <div
              class="component hasImage"
              style="width: 28px; height: 28px;"
            >
              <div
                class="initials"
                style="width: 28px; height: 28px; font-size: 11.666666666666668px;"
              >
                <span
                  style="line-height: 30px;"
                />
              </div>
              <img
                alt="avatar"
                class="gravatar"
                src="/assets/img/icons/logo.png"
              />
            </div>
          </div>
          <div
            class="ml-3"
          >
            <div
              class="name autoResponder"
            >
              <i
                class="material-icons mr-1"
              >
                auto_awesome
              </i>
              Auto Responder
            </div>
            <div>
              <p>
                Hi Client Name,
              </p>
              <p>
                We detected that your request might be about tracking an order status. Is that tracking information useful?
              </p>
              <div
                class="container orderTracking"
              >
                <div
                  class="orderTitleContainer"
                >
                  <div
                    class="orderTitle"
                  >
                    Order number
                  </div>
                  <div
                    class="orderPrice"
                  >
                    Price
                  </div>
                </div>
                <div
                  class="fulfillmentContainer"
                >
                  <div
                    class="product"
                  >
                    <div
                      class="productTitle"
                    >
                      Product 1
                    </div>
                    <div
                      class="productPrice"
                    >
                      Price x1
                    </div>
                  </div>
                  <div
                    class="product"
                  >
                    <div
                      class="productTitle"
                    >
                      Product 2
                    </div>
                    <div
                      class="productPrice"
                    >
                      Price x2
                    </div>
                  </div>
                  <div
                    class="trackingLink"
                  >
                    loremipsum.com/tracking-1234
                  </div>
                </div>
                <div
                  class="fulfillmentContainer"
                >
                  <div
                    class="product"
                  >
                    <div
                      class="productTitle"
                    >
                      Product 3
                    </div>
                    <div
                      class="productPrice"
                    >
                      Price x1
                    </div>
                  </div>
                  <div
                    class="trackingLink"
                  >
                    loremipsum.com/tracking-4321
                  </div>
                </div>
              </div>
              <p>
                If you need more help you can reply to this email and we will get back to you as soon as possible.
              </p>
              <p>
                Agent Name
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="descriptionBlock"
      >
        <p
          class="legend"
        >
          see example above
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AutoReplyWismoModal/> should render the autoclose spam body when automation add-on is not subscribed 1`] = `
<div
  class="managedRule autoReplyWismo bordered"
>
  <div
    class="titleWrapper"
  >
    <span
      class="title"
    >
      my rule
    </span>
  </div>
  <div
    class="container"
  >
    <div
      class="description"
    >
      <div
        class="count"
      >
        <div
          class="targetTitle"
        >
          target up to
        </div>
        <div
          class="targetValue"
        >
          <span
            class="bold"
          >
            10
          </span>
           
          tickets/month
        </div>
      </div>
      <div
        class="descriptionBlock"
      >
        <h4>
          Answer "Where is my order" request automatically
        </h4>
        <p>
          This rule leverages AI to automatically detect if incoming emails from shoppers are related
           
          <strong>
            to tracking or “where is my order” requests
          </strong>
          . When such a message is detected, the rule sends an automated message providing shoppers with the tracking link for their three last orders and closes the ticket.
        </p>
      </div>
      <div
        class="descriptionBlock"
      >
        <h4>
          Customize your message
        </h4>
        <p>
          You can personalize your message to make it your own.
        </p>
      </div>
      <div
        class="descriptionBlock"
      >
        <p
          class="addendum"
        >
          If your customer replies to the automated message, the ticket will be reopened in your backend. This rule requires an active Shopify integration to work correctly.
        </p>
      </div>
      <div
        class="descriptionBlock"
      />
    </div>
    <div
      class="example"
    >
      <div
        class="exampleContainer bordered"
      >
        <div
          class="fakeMessage"
        >
          <div
            class="component"
            style="width: 28px; height: 28px;"
          >
            <div
              class="initials"
              style="width: 28px; height: 28px; font-size: 11.666666666666668px;"
            >
              <span
                style="line-height: 30px;"
              >
                Cn
              </span>
            </div>
          </div>
          <div
            class="ml-3"
          >
            <div
              class="name"
            >
              Client Name
            </div>
            <div>
              Hey, do you have a tracking number so I can double check?
            </div>
          </div>
        </div>
        <div
          class="fakeMessage"
        >
          <div>
            <div
              class="component hasImage"
              style="width: 28px; height: 28px;"
            >
              <div
                class="initials"
                style="width: 28px; height: 28px; font-size: 11.666666666666668px;"
              >
                <span
                  style="line-height: 30px;"
                />
              </div>
              <img
                alt="avatar"
                class="gravatar"
                src="/assets/img/icons/logo.png"
              />
            </div>
          </div>
          <div
            class="ml-3"
          >
            <div
              class="name autoResponder"
            >
              <i
                class="material-icons mr-1"
              >
                auto_awesome
              </i>
              Auto Responder
            </div>
            <div>
              <p>
                Hi Client Name,
              </p>
              <p>
                We detected that your request might be about tracking an order status. Is that tracking information useful?
              </p>
              <div
                class="container orderTracking"
              >
                <div
                  class="orderTitleContainer"
                >
                  <div
                    class="orderTitle"
                  >
                    Order number
                  </div>
                  <div
                    class="orderPrice"
                  >
                    Price
                  </div>
                </div>
                <div
                  class="fulfillmentContainer"
                >
                  <div
                    class="product"
                  >
                    <div
                      class="productTitle"
                    >
                      Product 1
                    </div>
                    <div
                      class="productPrice"
                    >
                      Price x1
                    </div>
                  </div>
                  <div
                    class="product"
                  >
                    <div
                      class="productTitle"
                    >
                      Product 2
                    </div>
                    <div
                      class="productPrice"
                    >
                      Price x2
                    </div>
                  </div>
                  <div
                    class="trackingLink"
                  >
                    loremipsum.com/tracking-1234
                  </div>
                </div>
                <div
                  class="fulfillmentContainer"
                >
                  <div
                    class="product"
                  >
                    <div
                      class="productTitle"
                    >
                      Product 3
                    </div>
                    <div
                      class="productPrice"
                    >
                      Price x1
                    </div>
                  </div>
                  <div
                    class="trackingLink"
                  >
                    loremipsum.com/tracking-4321
                  </div>
                </div>
              </div>
              <p>
                If you need more help you can reply to this email and we will get back to you as soon as possible.
              </p>
              <p>
                Agent Name
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="descriptionBlock"
      >
        <p
          class="legend"
        >
          see example above
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AutoReplyWismoModal/> should render the autoclose spam body when automation add-on is subscribed 1`] = `
<div
  class="managedRule autoReplyWismo"
>
  <div
    class="container"
  >
    <div
      class="description"
    >
      <div
        class="count"
      >
        <div
          class="targetTitle"
        >
          target up to
        </div>
        <div
          class="targetValue"
        >
          <span
            class="bold"
          >
            10
          </span>
           
          tickets/month
        </div>
      </div>
      <div
        class="descriptionBlock"
      >
        <h4>
          Answer "Where is my order" request automatically
        </h4>
        <p>
          This rule leverages AI to automatically detect if incoming emails from shoppers are related
           
          <strong>
            to tracking or “where is my order” requests
          </strong>
          . When such a message is detected, the rule sends an automated message providing shoppers with the tracking link for their three last orders and closes the ticket.
        </p>
      </div>
      <div
        class="descriptionBlock"
      >
        <h4>
          Customize your message
        </h4>
        <p>
          You can personalize your message to make it your own.
        </p>
      </div>
      <div
        class="descriptionBlock"
      >
        <p
          class="addendum"
        >
          If your customer replies to the automated message, the ticket will be reopened in your backend. This rule requires an active Shopify integration to work correctly.
        </p>
      </div>
      <div
        class="descriptionBlock"
      />
    </div>
    <div
      class="example"
    >
      <div
        class="exampleContainer bordered"
      >
        <div
          class="fakeMessage"
        >
          <div
            class="component"
            style="width: 28px; height: 28px;"
          >
            <div
              class="initials"
              style="width: 28px; height: 28px; font-size: 11.666666666666668px;"
            >
              <span
                style="line-height: 30px;"
              >
                Cn
              </span>
            </div>
          </div>
          <div
            class="ml-3"
          >
            <div
              class="name"
            >
              Client Name
            </div>
            <div>
              Hey, do you have a tracking number so I can double check?
            </div>
          </div>
        </div>
        <div
          class="fakeMessage"
        >
          <div>
            <div
              class="component hasImage"
              style="width: 28px; height: 28px;"
            >
              <div
                class="initials"
                style="width: 28px; height: 28px; font-size: 11.666666666666668px;"
              >
                <span
                  style="line-height: 30px;"
                />
              </div>
              <img
                alt="avatar"
                class="gravatar"
                src="/assets/img/icons/logo.png"
              />
            </div>
          </div>
          <div
            class="ml-3"
          >
            <div
              class="name autoResponder"
            >
              <i
                class="material-icons mr-1"
              >
                auto_awesome
              </i>
              Auto Responder
            </div>
            <div>
              <p>
                Hi Client Name,
              </p>
              <p>
                We detected that your request might be about tracking an order status. Is that tracking information useful?
              </p>
              <div
                class="container orderTracking"
              >
                <div
                  class="orderTitleContainer"
                >
                  <div
                    class="orderTitle"
                  >
                    Order number
                  </div>
                  <div
                    class="orderPrice"
                  >
                    Price
                  </div>
                </div>
                <div
                  class="fulfillmentContainer"
                >
                  <div
                    class="product"
                  >
                    <div
                      class="productTitle"
                    >
                      Product 1
                    </div>
                    <div
                      class="productPrice"
                    >
                      Price x1
                    </div>
                  </div>
                  <div
                    class="product"
                  >
                    <div
                      class="productTitle"
                    >
                      Product 2
                    </div>
                    <div
                      class="productPrice"
                    >
                      Price x2
                    </div>
                  </div>
                  <div
                    class="trackingLink"
                  >
                    loremipsum.com/tracking-1234
                  </div>
                </div>
                <div
                  class="fulfillmentContainer"
                >
                  <div
                    class="product"
                  >
                    <div
                      class="productTitle"
                    >
                      Product 3
                    </div>
                    <div
                      class="productPrice"
                    >
                      Price x1
                    </div>
                  </div>
                  <div
                    class="trackingLink"
                  >
                    loremipsum.com/tracking-4321
                  </div>
                </div>
              </div>
              <p>
                If you need more help you can reply to this email and we will get back to you as soon as possible.
              </p>
              <p>
                Agent Name
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="descriptionBlock"
      >
        <p
          class="legend"
        >
          see example above
        </p>
      </div>
    </div>
  </div>
</div>
`;
